apps/entangled-frontend/prod/networking/gateways/gateway-entangled-frontend-prod-web.yaml
# Gateway (Gateway API) for the entangled-frontend prod environment.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-entangled-frontend-prod-web
  namespace: entangled-frontend
spec:
  gatewayClassName: traefik
  listeners:
  # entangled.cardano.vip listeners
  - name: http-cardano-vip
    hostname: entangled.cardano.vip
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-cardano-vip
    hostname: entangled.cardano.vip
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-entangled-frontend-prod-cardano-vip-tls
    allowedRoutes:
      namespaces:
        from: All
  # e7d.tech listeners
  - name: http-e7d-tech
    hostname: e7d.tech
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-e7d-tech
    hostname: e7d.tech
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-entangled-frontend-prod-e7d-tech-tls
    allowedRoutes:
      namespaces:
        from: All
  # www.e7d.tech listeners (redirect to e7d.tech)
  - name: http-www-e7d-tech
    hostname: www.e7d.tech
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-www-e7d-tech
    hostname: www.e7d.tech
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-entangled-frontend-prod-e7d-tech-tls
    allowedRoutes:
      namespaces:
        from: All
